added Home page and Task page info

--- a/task-force-frontend/src/app/home/home.component.html
+++ b/task-force-frontend/src/app/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <br>
+        <h3>Home Page Component</h3>
+        <br>
+        <h5>Do We Even Need a Home page?</h5>
+        <br>
+        <h6>Could our "Tasks" Link in the navbar be an <a href="https://ng-bootstrap.github.io/#/components/dropdown/examples">ng-bootstrap Dropdown</a> 
+            that says Tasks but has options for: </h6>
+            <ul>
+              <li>View Task List</li>
+              <li>Create New Task</li>
+              <li>Edit Task</li>
+            </ul>
+
+        <h6>just thinking out loud in HTML here...</h6>
+
+        
+  
+      </div>
+    </div>
+  
+</div>
