--- a/task-force-frontend/src/app/task/task-page/task-page.component.html
+++ b/task-force-frontend/src/app/task/task-page/task-page.component.html
@@ -1,1 +1,70 @@
-<p>task-page works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <br>
+        <h3>Task Page Component</h3>
+        <br>
+
+        <h6>Should our "Tasks" Link in the navbar be an <a href="https://ng-bootstrap.github.io/#/components/dropdown/examples">ng-bootstrap Dropdown</a> 
+          that says Tasks but has options for: </h6>
+          <ul>
+            <li>View Task List</li>
+            <li>Create New Task</li>
+            <li>Edit Task</li>
+          </ul>
+
+        <h5>Do we want to show the basic task list as a table?</h5>
+        <h6>- hardcoded data in the example table below, but I see using a datepicker to populate a formatted Creation Date and a checkbox for Completed</h6>
+        <h6>I like the <a href="https://ng-bootstrap.github.io/#/components/table/examples#sortable">ng Bootstrap Sortable Table</a>  as an option...</h6>
+        <h6>Then perhaps we add events for them to get the full details of their task by selecting all or part of the row desired in the table ??? </h6>
+        <table class="table table-striped">
+          <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Title</th>
+            <th scope="col">Creation Date</th>
+            <th scope="col">Completed?</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td>1</td>
+            <td>Buy House</td>
+            <td>2020_0818</td>
+            <td>No</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Cut Firewood</td>
+            <td>2020_0818</td>
+            <td>No</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Take OCJA Exam</td>
+            <td>2020_0818</td>
+            <td>No</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Take AWS Exam</td>
+            <td>2020_0818</td>
+            <td>No</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Task Force Project Work</td>
+            <td>2020_0818</td>
+            <td>No</td>
+          </tr>
+          </tbody>
+        </table>
+
+
+        
+  
+  
+      </div>
+    </div>
+  
+  </div>
