Mock up of Task Details view using cards. Also added a route for task Details

--- a/task-force-frontend/src/app/navbar-link/navbar-link.component.html
+++ b/task-force-frontend/src/app/navbar-link/navbar-link.component.html
@@ -1,2 +1,2 @@
-<a class="nav-item nav-link" routerLinkActive="active" [routerLink]="link"
+<a class="nav-item nav-link m-1" routerLinkActive="active" [routerLink]="link"
   [routerLinkActiveOptions]="{exact:true}">{{text}}</a>
