--- a/task-force-frontend/src/app/navbar/navbar.component.html
+++ b/task-force-frontend/src/app/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <nav class="nav navbar nav-tabs navbar-expand-sm bg-dark">
     <app-navbar-link link="" text="Home"></app-navbar-link>
     <app-navbar-link link="/tasks" text="Tasks"></app-navbar-link>
+    <app-navbar-link link="/taskDetails" text="TaskDetails"></app-navbar-link>
   </nav>
