--- a/task-force-frontend/src/app/task/task-detail/task-detail.component.html
+++ b/task-force-frontend/src/app/task/task-detail/task-detail.component.html
@@ -1,1 +1,38 @@
-<p>task-detail works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <br>
+        <h3>Task Details Component</h3>
+        <br>
+        <h6>Here is what our task details might look like with cards. The card element documentation can be found 
+            <a href="https://getbootstrap.com/docs/4.0/components/card/">here.</a></h6>
+        <br>
+        <main *ngFor="let task of tasks" [task]="task">
+            <ng-container *ngIf="task.completed as boolean; then completed; else notCompleted">
+            </ng-container>
+                <ng-template #completed> 
+                    <div class="card border-success mb-3" style="max-width: 20rem;">
+                        <div class="card-header">{{ task.createdOn }}</div>
+                        <div class="card-body text-success">
+                          <h5 class="card-title">{{ task.title }}</h5>
+                          <p class="card-text">Status: Done</p>
+                          <button type="button" class="btn btn-info m-1">Update</button>
+                          <button type="button" class="btn btn-danger">Delete</button>
+                        </div>
+                    </div>
+                </ng-template>
+                <ng-template #notCompleted>
+                    <div class="card border-warning mb-3" style="max-width: 20rem;">
+                        <div class="card-header">{{ task.createdOn }}</div>
+                        <div class="card-body text-warning">
+                          <h5 class="card-title">{{ task.title }}</h5>
+                          <p class="card-text">Status: Not Done</p>
+                          <button type="button" class="btn btn-info m-1">Update</button>
+                          <button type="button" class="btn btn-danger">Delete</button>
+                        </div>
+                      </div>
+                </ng-template>
+        </main>
+      </div>
+    </div>
+  </div>
