add delete all tasks, create task links to task-detail

--- a/task-force-frontend/src/app/home/home.component.html
+++ b/task-force-frontend/src/app/home/home.component.html
@@ -2,21 +2,20 @@
     <div class="row">
       <div class="col-xs-12">
         <br>
-        <h3>Home Page Component</h3>
+        <!-- <h3>Home Page Component</h3>
+        <br> -->
+        <h3>What do you want to do?</h3>
         <br>
-        <h5>Do We Even Need a Home page?</h5>
-        <br>
-        <h6>Could our "Tasks" Link in the navbar be an <a href="https://ng-bootstrap.github.io/#/components/dropdown/examples">ng-bootstrap Dropdown</a> 
-            that says Tasks but has options for: </h6>
+        <!-- <h6>Could our "Tasks" Link in the navbar be an <a href="https://ng-bootstrap.github.io/#/components/dropdown/examples">ng-bootstrap Dropdown</a> 
+            that says Tasks but has options for: </h6> -->
             <ul>
               <button [routerLink]="['/tasks']" type="btn btn-secondary" id="view">View Task List</button>
-              <li>Create New Task</li>
-              <li>Edit Task</li>
-            </ul>
-
-        <h6>just thinking out loud in HTML here...</h6>
-
-        
+              <br><br>
+              <button [routerLink]="['/taskDetails']" type="btn btn-secondary" id="create">Create a New Task</button>
+              <br><br>
+              <button [routerLink]="['/']" type="btn btn-secondary" id="deleteAll" (click)="deleteTasks()">Delete All Tasks</button>
+              <br><br>
+            </ul>       
   
       </div>
     </div>
